get menu and get list dish-categories guest
