# src/routes/guests/menu.routes.ts
@@ -1,9 +1,17 @@
 import { Router } from "express"
 import { wrapHandlerFunction } from "../../utils/wrapHandler"
-import { accessTokenValidation } from "../../middlewares/guests/guest.middlewares"
-import { getGuestMenuController } from "../../controllers/guests/menu.controllers"
+import { accessTokenValidation, getMenuValidation } from "../../middlewares/guests/guest.middlewares"
+import { getDishCategories, getGuestMenuController } from "../../controllers/guests/menu.controllers"
 
 const menuGuestRoutes = Router()
+
+/**
+ * Description: Get list dish category
+ * PATH: /guest/dish-categories
+ * Method: GET
+ * Header: Authorization: Bearer <GuestToken>
+ */
+menuGuestRoutes.get("/dish-categories", accessTokenValidation, wrapHandlerFunction(getDishCategories))
 
 /**
  * Description: Get full menu (Grouped by Category)
@@ -11,6 +19,11 @@ const menuGuestRoutes = Router()
  * Method: GET
  * Header: Authorization: Bearer <GuestToken>
  */
-menuGuestRoutes.get("/", accessTokenValidation, wrapHandlerFunction(getGuestMenuController))
+menuGuestRoutes.get(
+  "/:categoryId/dishes",
+  accessTokenValidation,
+  getMenuValidation,
+  wrapHandlerFunction(getGuestMenuController)
+)
 
 export default menuGuestRoutes
